# tree-sitter-jsonp

./: binding.gyp  cargo.toml  cmakelists.txt  go.mod  grammar.js  makefile  package.json  package.swift  pyproject.toml  readme.md  setup.py  test.jsonp  tree-sitter.json
bindings/c/: tree-sitter-jsonp.pc.in
bindings/c/tree_sitter/: tree-sitter-jsonp.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jsonp/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterjsonpTests/: TreeSitterjsonpTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
