[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-jsonp"
description = "Tree sitter grammar for the JSONP format"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "jsonp"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "colton murphy", email = "none" }]
requires-python = ">=3.10"
license.text = "BSD-3"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/losttime76/tree-sitter-jsonp"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
